apps/prototype/canary/rollout-1.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  labels:
    istio-injection: enabled
spec:
  revisionHistoryLimit: 1
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: canary
      app.kubernetes.io/name: prototype
  template:
    metadata:
      labels:
        app: prototype
        version: green
        app.kubernetes.io/component: canary
        app.kubernetes.io/name: prototype
    spec:
#      initContainers:
#        - name: init
#          image: busybox:1.28
#          command: [ 'sh', '-c', "sleep 1m" ]
      containers:
      - name: rollouts-demo
        image: turo/rollouts-demo:purple
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
          timeoutSeconds: 30
  strategy:
    canary:
      canaryService: canary-prototype-preview
      stableService: canary-prototype-stable
      scaleDownDelaySeconds: 600
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        istio:
          virtualService:
            name: canary-prototype   # required
            routes:
              - stable            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setCanaryScale: # scale replicaset to 100% with only 20% traffic
          weight: 100
      - pause: {}
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
