apps/prototype/canary/rollout-2.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: depends-on-canary
  labels:
    istio-injection: enabled
spec:
  replicas: 3
  revisionHistoryLimit: 1
  progressDeadlineSeconds: 60
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: depends-on-canary
      app.kubernetes.io/name: prototype
  template:
    metadata:
      labels:
        app: prototype
        version: green
        app.kubernetes.io/component: depends-on-canary
        app.kubernetes.io/name: prototype
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:purple
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
            timeoutSeconds: 30
  strategy:
    canary:
      canaryService: depends-on-canary-prototype-preview
      stableService: depends-on-canary-prototype-stable
      scaleDownDelaySeconds: 60
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        istio:
          virtualService:
            name: depends-on-canary-prototype   # required
            routes:
              - stable            # optional if there is a single route in VirtualService, required otherwise
      steps:
        - setCanaryScale: # scale replicaset to 100% with only 20% traffic
            weight: 100
        - experiment:
            templates:
              - name: experiment-canary
                specRef: canary
                weight: 5
              - name: experiment-stable
                specRef: stable
                weight: 5
        - analysis:
            templates:
              - templateName: wait-for-rollout
            args:
              - name: rollout-name
                value: canary
              - name: rollout-namespace
                valueFrom:
                  fieldRef:
                    fieldPath: metadata.namespace
              - name: rollout-weight-threshold
                value: "20"
        - pause: {}
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
