apps/prototype/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  labels:
    istio-injection: enabled
spec:
  replicas: 3
  revisionHistoryLimit: 1
  progressDeadlineSeconds: 60
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: canary
      app.kubernetes.io/name: prototype
  template:
    metadata:
      labels:
        app: prototype
        version: green
        app.kubernetes.io/component: canary
        app.kubernetes.io/name: prototype
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:purple
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
          timeoutSeconds: 30
  strategy:
    canary:
      canaryService: canary-prototype-preview
      stableService: canary-prototype-stable
      scaleDownDelaySeconds: 60
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        istio:
          virtualService:
            name: canary-prototype   # required
            routes:
              - stable            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setCanaryScale: # scale replicaset to 100% with only 20% traffic
          weight: 100
      - pause: {}
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: depends-on-canary
  labels:
    istio-injection: enabled
spec:
  replicas: 3
  revisionHistoryLimit: 1
  progressDeadlineSeconds: 60
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: depends-on-canary
      app.kubernetes.io/name: prototype
  template:
    metadata:
      labels:
        app: prototype
        version: green
        app.kubernetes.io/component: depends-on-canary
        app.kubernetes.io/name: prototype
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:purple
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
            timeoutSeconds: 30
  strategy:
    canary:
      canaryService: depends-on-canary-prototype-preview
      stableService: depends-on-canary-prototype-stable
      scaleDownDelaySeconds: 60
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        istio:
          virtualService:
            name: depends-on-canary-prototype   # required
            routes:
              - stable            # optional if there is a single route in VirtualService, required otherwise
      steps:
        - analysis:
            templates:
              - templateName: wait-for-rollout
            args:
              - name: weight-threshold
                value: "20"
              - name: rollout-name
                value: canary
              - name: rollout-namespace
                valueFrom:
                  fieldRef:
                    fieldPath: metadata.namespace
        - setWeight: 20
        - setCanaryScale: # scale replicaset to 100% with only 20% traffic
            weight: 100
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
