apps/prototype/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-web-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-web-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: canary
---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: canary
