apps/prototype/canary/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-prototype
spec:
  hosts:
    - canary-prototype-stable.prototype.svc.cluster.local
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value:
              100
      route:
        - destination:
            host: canary-prototype-stable
